--- a/.env.example
+++ b/.env.example
@@ -33,7 +33,7 @@ MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=ssl
 
-MAIL_FROM_NAME="Booking Core"
+MAIL_FROM_NAME="ArabCode"
 MAIL_FROM_ADDRESS=no-reply@bookingcore.org
 
 AWS_ACCESS_KEY_ID=
